# aura-style-lora

./: .gitattributes  .gitignore  ABLATION.md  AGENTS.md  EXPORT.md  OM_GUIDE.md  README.md  check.py  export.py  export_flux2_onnx.py  main.py  onnx_to_om.py  pyproject.toml  run_sd15_style_control.py  train.py  train_sd15_style_lora.py
configs/: export_flux2_cann.yaml  flux_lora.toml  local_edit_lora.yaml  sd15_style_control.yaml  sd15_style_lora.yaml
configs/environment/: huggingface_mirror.yaml
configs/evaluation/: local_edit.yaml
configs/export/: export.yaml  flux2_cann.yaml
configs/export/models/: flux2.yaml  s3od-dis.yaml  s3od.yaml
configs/models/: flux2_export.yaml  local_edit.yaml  sd15_style.yaml  sd15_style_control.yaml
configs/prompt/: aura_style.yaml
configs/training/: local_edit_lora.yaml  sd15_style_lora.yaml
fal_flux2_edit_lora/: README.md  config_342740f8-8ed7-4b9a-88c3-7afb87679d59.json  fal-training-result.json  pytorch_lora_weights.safetensors
script_archive/: train_flux2_edit_lora_fal.py
scripts/: download_sd15_style_control_weights.py  generate_realistic_label_pairs.py  run_flux2_edit_lora_fal.py  run_flux2_edit_lora_local.py  run_local_edit_lora.py  train_dreambooth_lora_flux_lowmem.py  train_flux2_edit_lora_fal.py
src/export/: __main__.py  cann_export.py  cli.py  flux2_cann_export.py
src/lora/: cli.py  flux2_cann_export.py  local_edit_common.py  local_edit_flux2.py  local_edit_inference.py  local_edit_sd.py  local_edit_sd3.py  local_edit_training.py  sd15_style_control.py  sd15_style_lora_training.py
src/lora/trainers/: __init__.py  flux_lowmem.py
src/model_export/: cann_export.py  flux2_cann_export.py  s3od_cann_export.py
tests/: test_cann_export.py  test_flux2_cann_export.py  test_flux_lowmem.py  test_local_edit_inference.py  test_local_edit_training.py  test_s3od_cann_export.py  test_sd15_style_control.py  test_sd15_style_lora_training.py
