[project]
name = "lora"
version = "0.1.0"
description = "Local tooling for preparing and training a FLUX-dev LoRA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.31.0",
    "datasets>=3.0.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "fal-client>=0.7.0",
    "ftfy",
    "hf_transfer",
    "huggingface-hub>=0.31.0",
    "hydra-core>=1.3.2",
    "jinja2",
    "peft>=0.11.1",
    "pillow>=10.4.0",
    "torch",
    "torchvision",
    "transformers>=4.41.2",
    "sentencepiece",
    "tensorboard",
    "bitsandbytes>=0.49.2",
    "protobuf>=7.35.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
lora = "lora.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
pythonVersion = "3.12"

